# Pony_Cursor

./: .gitignore  README.md  git_log.bat  install_pony.bat  pony_boot.py  pony_git.cmd  pony_local.py
GitHub专用/: Hi AI.json.example  README.md  dpi.py  edition.py  main.py  model_aliases.py  ollama_client.py  requirements.txt  run_web.bat  settings.json  stats_charts.py  ui.py  version.py  web_server.py
GitHub专用/static/: index.html  stats.js
New/: dependencies.json  install_helper.py  run_install_helper.bat
desktop-pet/: DesktopPet.spec  SPEC.md  pet.py  pet_settings.json  requirements.txt  run_pet.bat  software_modes.txt  sync_desktop.ps1  work_mode.txt  快速更新.bat
game/: _load_pony.py  constants.py  dodge_save.json  element_hidden.py  main.py  persistence.py
local-only/: README.md
opencode/: README.md  pony_git.cmd  pyproject.toml
opencode/opencode/: __init__.py  cli.py  db.py  git_cmd.py  help_text.py  list_cmd.py  paths.py  records.py  rm_cmd.py  rollback_cmd.py  ui.py
