[project]
name = "opencode-cli"
version = "0.1.0"
description = "Pony CLI: OpenCode session list/restore (command: pony, not opencode)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pony = "opencode.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# 显式列出包：避免 setuptools.packages.find 的 include 模式在部分环境下未收录 opencode，
# 导致仅安装了 pony 入口脚本却无可导入的 opencode 包（ModuleNotFoundError）。
[tool.setuptools]
packages = ["opencode"]
